// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildTypeSteps builds expected steps for hotkeys 1`] = `
Array [
  Object {
    "action": "type",
    "cssSelector": undefined,
    "html": Object {
      "ancestors": Array [],
      "node": Object {
        "attrs": Object {},
        "children": Array [],
        "name": "body",
        "type": "tag",
        "voidElement": true,
      },
    },
    "index": 0,
    "page": 0,
    "value": "↓KeyG↓KeyI↑KeyI↑KeyG",
  },
]
`;

exports[`buildTypeSteps builds expected steps for login 1`] = `
Array [
  Object {
    "action": "type",
    "cssSelector": undefined,
    "html": Object {
      "ancestors": Array [
        Object {
          "attrs": Object {
            "class": "large-6 small-12 columns",
          },
          "children": Array [],
          "name": "div",
          "type": "tag",
          "voidElement": false,
        },
        Object {
          "attrs": Object {
            "class": "row",
          },
          "children": Array [],
          "name": "div",
          "type": "tag",
          "voidElement": false,
        },
      ],
      "node": Object {
        "attrs": Object {
          "id": "username",
          "labels": "Username",
          "name": "username",
          "type": "text",
        },
        "children": Array [],
        "name": "input",
        "type": "tag",
        "voidElement": true,
      },
    },
    "index": 28,
    "page": 0,
    "value": "tomsmith",
  },
  Object {
    "action": "type",
    "cssSelector": undefined,
    "html": Object {
      "ancestors": Array [
        Object {
          "attrs": Object {
            "class": "large-6 small-12 columns",
          },
          "children": Array [],
          "name": "div",
          "type": "tag",
          "voidElement": false,
        },
        Object {
          "attrs": Object {
            "class": "row",
          },
          "children": Array [],
          "name": "div",
          "type": "tag",
          "voidElement": false,
        },
      ],
      "node": Object {
        "attrs": Object {
          "id": "username",
          "labels": "Username",
          "name": "username",
          "type": "text",
        },
        "children": Array [],
        "name": "input",
        "type": "tag",
        "voidElement": true,
      },
    },
    "index": 44,
    "page": 0,
    "value": "↓Tab↑Tab",
  },
  Object {
    "action": "type",
    "cssSelector": undefined,
    "html": Object {
      "ancestors": Array [
        Object {
          "attrs": Object {
            "class": "large-6 small-12 columns",
          },
          "children": Array [],
          "name": "div",
          "type": "tag",
          "voidElement": false,
        },
        Object {
          "attrs": Object {
            "class": "row",
          },
          "children": Array [],
          "name": "div",
          "type": "tag",
          "voidElement": false,
        },
      ],
      "node": Object {
        "attrs": Object {
          "id": "password",
          "labels": "Password",
          "name": "password",
          "type": "password",
        },
        "children": Array [],
        "name": "input",
        "type": "tag",
        "voidElement": true,
      },
    },
    "index": 48,
    "page": 0,
    "value": "SuperSecretPassword!",
  },
  Object {
    "action": "type",
    "cssSelector": undefined,
    "html": Object {
      "ancestors": Array [
        Object {
          "attrs": Object {
            "class": "large-6 small-12 columns",
          },
          "children": Array [],
          "name": "div",
          "type": "tag",
          "voidElement": false,
        },
        Object {
          "attrs": Object {
            "class": "row",
          },
          "children": Array [],
          "name": "div",
          "type": "tag",
          "voidElement": false,
        },
      ],
      "node": Object {
        "attrs": Object {
          "id": "password",
          "labels": "Password",
          "name": "password",
          "type": "password",
        },
        "children": Array [],
        "name": "input",
        "type": "tag",
        "voidElement": true,
      },
    },
    "index": 51,
    "page": 0,
    "value": "↓Enter↑Enter",
  },
]
`;

exports[`buildTypeSteps builds expected steps for selectall 1`] = `
Array [
  Object {
    "action": "type",
    "cssSelector": undefined,
    "html": Object {
      "ancestors": Array [
        Object {
          "attrs": Object {
            "class": "container",
          },
          "children": Array [],
          "name": "div",
          "type": "tag",
          "voidElement": false,
        },
        Object {
          "attrs": Object {
            "style": "display: flex; flex-wrap: wrap;",
          },
          "children": Array [],
          "name": "div",
          "type": "tag",
          "voidElement": false,
        },
      ],
      "node": Object {
        "attrs": Object {
          "data-qa": "html-text-input-filled",
          "placeholder": "Filled text input",
          "type": "text",
          "value": "initial text",
        },
        "children": Array [],
        "name": "input",
        "type": "tag",
        "voidElement": true,
      },
    },
    "index": 5,
    "page": 0,
    "replace": true,
    "value": "hello",
  },
  Object {
    "action": "type",
    "cssSelector": undefined,
    "html": Object {
      "ancestors": Array [
        Object {
          "attrs": Object {
            "class": "container",
          },
          "children": Array [],
          "name": "div",
          "type": "tag",
          "voidElement": false,
        },
        Object {
          "attrs": Object {
            "style": "display: flex; flex-wrap: wrap;",
          },
          "children": Array [],
          "name": "div",
          "type": "tag",
          "voidElement": false,
        },
      ],
      "node": Object {
        "attrs": Object {
          "data-qa": "html-text-input-filled",
          "placeholder": "Filled text input",
          "type": "text",
          "value": "initial text",
        },
        "children": Array [],
        "name": "input",
        "type": "tag",
        "voidElement": true,
      },
    },
    "index": 15,
    "page": 0,
    "value": "↓Tab↑Tab",
  },
]
`;
